[tool.poetry]
name = "cookiebot"
version = "0.1.0"
description = "yummy cookies"
authors = ["Lukas Döllerer <info@lukas-doellerer.de>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
python-dotenv = "^0.19.2"
discord-pretty-help = "^1.3.3"

[tool.poetry.dev-dependencies]
ipython = "^8.10.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
